# lexa

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  OOPSLA25.md  README.md  buildpasses.sh  flake.nix  lexa  offset_functions.h  state.lx
casestudies/anf/: anf.lx  anf.t
casestudies/ppl/: common.lx  ppl.t
examples/: arithmetic.lx  choice.lx  effect.lx  file_protocol.lx  logic.lx  refs.lx  state.lx  tick.lx  transaction.lx
nix/: clang18.nix  effekt_latest.nix  koka_latest.nix  libmprompt.nix  libmprompt.patch  omit_fp_even_with_stackmap.patch
passes/: CMakeLists.txt
passes/addNoCapture/: AddNoCaptureToAsm.cpp  CMakeLists.txt
passes/attachMetadata/: AttachMetadata.cpp  CMakeLists.txt
passes/generateStackMap/: CMakeLists.txt  GenerateStackMap.cpp
passes/markInvariant/: CMakeLists.txt  MarkInvariant.cpp
scripts/: README  bench.py  config.py  utils.py
scripts/OOPSLA25/: README.md  lexaz_config.py  plots.py  plotting_runtimes_3_25.csv  runtimes_3_25.csv
src/stacktrek/: common.h  datastructure.h  stack_pool.h  stacktrek.h
src/stackwalk/: analyze_binary.py  annotate_binary.py  parse_dwarf.py  parse_stackmap.ipynb  parse_stackmap.py  stackwalk.c
stdlib/: assert.lx  list.lx  option.lx  pair.lx  queue.lx  stack.lx
stdlib/lexaz/: list.lx  option.lx  pair.lx
test/benchmarks/: ackermann.t  ackermann_z.t  bezout.t  bezout_z.t  capability_z.t  catalan.t  catalan_z.t  countdown_compile.t  countdown_z.t  dune  fibonacci_recursive.t  fibonacci_recursive_compile.t  generator.t  generator_compile.t  generator_z.t  golomb.t  golomb_z.t  logger.t  (+43 more)
(+310 files in other folders)
